--- a/src/app/components/movie/detailed-movie/detailed-movie.component.html
+++ b/src/app/components/movie/detailed-movie/detailed-movie.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="container py-3 bg-dark text-white">
         <div class="row border-bottom">
-            <img class="col-3" src={{movie.Poster}}>
+            <img *ngIf="movie.Poster != 'N/A'" class="col-3" src={{movie.Poster}}>
             <div class="col">
                 <h6 class="border-bottom p-5 border-secondary">{{movie.Plot}}</h6>
                 <h5 class="px-2">Cast</h5>
